--- a/src/HeckEngine/HeckEngine.App/App.xaml
+++ b/src/HeckEngine/HeckEngine.App/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TreePainter.App"
+﻿<Application x:Class="HeckEngine.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TreePainter"
+             xmlns:local="clr-namespace:HeckEngine.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
